--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "manifest": "npm server.js"
+        "start": "nodemon server.js & open http://localhost:3000"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +12,10 @@
   "type": "commonjs",
   "dependencies": {
     "axios": "^1.13.2",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "open": "^11.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
